# OmniMercury

./: .gitignore  AGENTS.md  CMakeLists.txt  INIT.md  Makefile  PLAN.md  README.md  apt_install.sh  build_output.txt  dev.bat  dev.sh  do_install_apt.sh  electron.vite.config.ts  install_and_run.bat  install_gui.sh  install_gui_libs.sh  install_libs.sh  package-lock.json  package.json  postcss.config.js  rebuild_better_sqlite3.sh  tailwind.config.js  test-deepseek-api.mjs  test-kimi-models.mjs  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  tsconfig.web.json
.github/workflows/: build.yml  build2.yml
include/: rss_reader.h
src/: .gitignore  db.c  fetch.c  ipc.c  main.c  parser.c  utils.c
src/main/: configService.ts  contentService.ts  db.ts  feedService.ts  ipc-client.ts  ipcHandlers.ts  llmService.ts  main.ts  notesExportService.ts  opmlService.ts  tagService.ts
src/preload/: index.ts
src/renderer/: App.tsx  global.d.ts  i18n.ts  index.css  index.html  main.tsx
src/renderer/components/: ArticleList.tsx  LLMSettings.tsx  NotesPanel.tsx  ReaderView.tsx  ResizeHandle.tsx  SearchBar.tsx  Sidebar.tsx  TagManager.tsx
src/renderer/components/ui/: button.tsx
src/renderer/lib/: utils.ts
src/renderer/locales/: en.json  zh-TW.json  zh.json
src/renderer/store/: index.ts
src/shared/: paragraphSplitter.ts  types.ts
workflows/: build.yml
